#+STARTUP: align fold nodlcheck hidestars oddeven lognotestate
#+TITLE: ORG-INFO.JS: Changes
#+AUTHOR: Sebastian Rose
#+EMAIL:
#+LANGUAGE: en
#+INFOJS_OPT: path:org-info.js
#+INFOJS_OPT: toc:nil localtoc:t view:info mouse:underline
#+INFOJS_OPT: up:http://orgmode.org/worg/
#+INFOJS_OPT: home:http://orgmode.org buttons:nil


* 2009-07-06

  * Existing access-keys now use the same keys as the shortcuts do.
  * When FIXED_TOC, re-focus the last link in the TOC when pressing `i'.
  * Allow TAB to traverse the TOC.

* 2009-07-04

  * Jumping TOC. Seems fixed now (hopefully).
  * Added `W' for printing. For printing, the whole document has to be in plain
    view mode and expanded. Browsers print what's visible on screen only.

* 2009-06-28

  Show the version number below the shortcut table.

* 2009-06-27

  Bugfix for links nested in lists.
  Thanks to Xin Shi for finding this and sending a testfile.

* 2009-06-25

  * Fix for start section.
    I a section was removed and the *.org file was published again, we saw an
    empty page when browsing to that old location (e.g. =xy.html#sec-11=). Now the
    first section is shown instead.

* 2009-06-22

  * *NOTE: now GPL 3*

  * FIX: go to previous sibling, even if it's the first one.

  * Removed some more unused stuff and fixed typos (=this.INPUT_FIELD=, =DEBUG=...).

  * All names of regular expressions end in =_REGEX=.

  * FIX: Altering the history lead to jumping of the page.

  * Uppercase names everywehre. I want this to distinguish class fields from
    functions and temporary variables. Stay YUI compressor friendly when we
    shorten the names. Needed for the rest of the todays changes.

  * Replaced =this.= by a local variable where possible. Decreased org-info.js
    size by 1.8 Kb.

  * Add a Makefile target for realy small org-info.js. This is not exactly
    perfect, but decreases the resulting file by about 10 Kb.

  * Added =hacking.org= to explain what happens here a bit.
