@@ -9,6 +9,12 @@
 #+INFOJS_OPT: home:http://orgmode.org buttons:nil
 
 
+
+* 2010-02-11
+
+  * Inhibit reloading the page on startup.
+    Fixes startup with `?VIEW=overview#sec-1'.
+
 * 2009-07-06
 
   * Existing access-keys now use the same keys as the shortcuts do.
